test/integration/good/tuples/simple2.stan
transformed data {
  tuple(array[2] real, int) x = ({1.01, 3.14}, 2);
  print(x.1[2]);
}
