test/integration/bad/err-double-dims.stan
transformed data {
  array[2.3] real y;
}
model {
}
